# roomba

./: README.md
esp_roomba/: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  sdkconfig.opt
esp_roomba/components/camera/: CMakeLists.txt  camera.cpp  camera.hpp  camera_config.hpp  idf_component.yml
esp_roomba/components/diagnostics/: CMakeLists.txt  diagnostics.cpp  diagnostics.hpp
esp_roomba/components/gpio/: CMakeLists.txt  idf_component.yml  motor.cpp  motor.hpp  pwm_controller.cpp  pwm_controller.hpp
esp_roomba/components/roomba/: CMakeLists.txt  roomba.hpp  roomba_cleaning.cpp  roomba_core.cpp  roomba_io.cpp  roomba_movement.cpp  roomba_sensors.cpp  roomba_streaming.cpp
esp_roomba/components/server/: CMakeLists.txt  http_web_server.cpp  http_web_server.hpp  new_socket_server.cpp  new_socket_server.hpp
esp_roomba/components/wifi/: CMakeLists.txt  wifi_manager.cpp  wifi_manager.hpp
esp_roomba/main/: CMakeLists.txt  idf_component.yml  main.cpp  motor_command.cpp  motor_command.hpp  server_integration.cpp  server_integration.hpp  wifi_ap.cpp  wifi_ap.hpp
esp_roomba/manual_tests/: README.md  bun.lockb  image-stream.ts  index.ts
ios/WSCameraESP/: README.md
ios/WSCameraESP/WSCameraESP/: AppDelegate.swift  Info.plist  (+5 more)
ios/WSCameraESP/WSCameraESP.xcodeproj/: project.pbxproj
pico_roomba/: .gitignore
pico_roomba/src/: config_example.py  main.one.py  main.py  motor.py  wifi.py
react-client/: index.html  package-lock.json  package.json
react-client/src/: App.tsx  connection-indicator.tsx  motor-speed-control.tsx  video-stream.tsx
(+30 files in other folders)
